# internal/controller/routes.go
@@ -3,6 +3,7 @@ package controller
 import (
 	echojwt "github.com/labstack/echo-jwt/v4"
 	"github.com/labstack/echo/v4"
+	"github.com/sysatom/framework/pkg/config"
 )
 
 func BindHelloRoutes(e *echo.Echo, c *HelloController) {
@@ -18,4 +19,14 @@ func BindValidateRoutes(e *echo.Echo, c *ValidateController) {
 		SigningKey: "secret",
 	})) // TODO jwt config
 	g.GET("/some", c.Validate)
+}
+
+func BindAdminRoutes(_ config.Type, e *echo.Echo, c *UserController) {
+	g := e.Group("/user")
+	g.POST("/login", c.Login)
+
+	//g.Use(echojwt.WithConfig(echojwt.Config{
+	//	SigningKey: config.App.JWTSecret,
+	//}))
+	g.GET("/info", c.Info)
 }
